# icub-rpccontroller

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/applications/: CMakeLists.txt  FingertipsPinchingExperimentLeft.xml.template  FingertipsPinchingExperimentRight.xml.template  PinchingPortScope.xml.template
app/contexts/: CMakeLists.txt
app/contexts/RPCController/: CMakeLists.txt  confRPCController.ini
src/modules/RPCController/: .RPCControllerModule.cpp.swp  .main.cpp.swp  CMakeLists.txt  RPCControllerModule.cpp  main.cpp
src/modules/RPCController/include/: .RPCControllerModule.h.swp  RPCControllerModule.h
